first version get projectinfo
