# service/ProjectService.js
@@ -1,46 +1,9 @@
 'use strict';
 
-
-/**
- * delete participant from project
- *
- * projectId Integer projectId.
- * userId Integer userId.
- * no response value expected for this operation
- **/
-exports.participantsDELETE = function(projectId,userId) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
- * Add new participant to project
- *
- * projectId Integer projectid.
- * voucher Voucher  (optional)
- * no response value expected for this operation
- **/
-exports.participantsPOST = function(projectId,voucher) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
- * delete project
- *
- * projectId Integer projectId.
- * no response value expected for this operation
- **/
-exports.projectDELETE = function(projectId) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
+const logger = require('pino')()
+const TokenService = require('./TokenService');
+const respondWithCode = require('../utils/writer').respondWithCode
+var dba = require('../service/DBService');
 
 /**
  * Get project based on id
@@ -48,77 +11,28 @@ exports.projectDELETE = function(projectId) {
  * projectId Integer projectid.
  * returns Project
  **/
-exports.projectGET = function(projectId) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "project_type" : "project_type",
-  "unused_vouchers" : 0,
-  "project_id" : 6,
-  "project_lang" : "nl",
-  "project_name" : "project_name",
-  "project_descr" : "project_descr",
-  "participants" : [ null, null ]
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
+exports.projectinfoGET = function(loginToken) {
+  return new Promise(async function(resolve, reject) {
+    try {
+      logger.info("LoginToken:"+loginToken);
+      var token = await TokenService.validateToken(loginToken);
+      logger.info('user id:' + token.id);
+
+      var project = await dba.getProject(token.id);
+      resolve({
+        own_project: token.id === project.ownerId,
+        project_name: project.project_name,
+        project_descr: project.project_descr,
+        project_type: project.project_type,
+        project_lang: project.project_lang
+      });
+
+    } catch (ex) {
+      logger.error(ex);
+      reject(new respondWithCode(500, {
+        code: 0,
+        message: 'Backend error'
+      }));
     }
   });
 }
-
-
-/**
- * update project based on id
- *
- * projectId Integer projectid.
- * returns Project
- **/
-exports.projectPATCH = function(projectId) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "project_type" : "project_type",
-  "unused_vouchers" : 0,
-  "project_id" : 6,
-  "project_lang" : "nl",
-  "project_name" : "project_name",
-  "project_descr" : "project_descr",
-  "participants" : [ null, null ]
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
-
-/**
- * Create new project
- *
- * project Project  (optional)
- * returns Project
- **/
-exports.projectPOST = function(project) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "project_type" : "project_type",
-  "unused_vouchers" : 0,
-  "project_id" : 6,
-  "project_lang" : "nl",
-  "project_name" : "project_name",
-  "project_descr" : "project_descr",
-  "participants" : [ null, null ]
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
